    - added config for how far the world is generated when you are in-game, default is 1 chunk in each direction
    - added system for storage of worlds with serializers and data fixers [data fixers are unused at the moment]
    - added option to inventories and blocks to add custom data to save with it (items had such an function before)
    - added save-access-screen, save-loading screen

    fixed bugs:
        - /generate <cx> <cz>-command was not working
        - seed was ignored by generation system
        - noises for world gen were NOT based on world seed [noticeable when loading an world and generating new chunks]
        - block entries in commands were requiring the mod-prefix


changelog of snapshot 20w10a [released on 04.03.2020]
    - updated libraries
    - added datapack support
    - added gamerules
    - new commands: /clone, /tell, /replaceitem, /gamerule
    - added multipart-block-model support
    - added generator code for creating BoundingBox from BlockState
    - BoxModels will now rotate properly relative to middle of block, not only changing textures
    - added new blocks: fences, walls
    - TickHandler has now an function to tick an function as fast as possible
    - added option for fog distance

    fixed bugs:
        - various exceptions from left-over things in the registry & slot changes from last snapshot
        - various issues with slot drawing
        - fixed exception on shift-clicking crafting output of main inventory


changelog of snapshot 20w09a [released on 26.02.2020]
    - changed TextureAtlas-block-addition system to be based on mod-based/texture size-based atlases
    - new blocks: furnace with inventory & crafting, barrel, ice variants, bone block, book shelf, coral blocks,
                  pumpkin, carved pumpkin, melon, clay, coarse dirt, prismarin blocks, dried kelp block, end stones,
                  glowstone, magma block, mossy stone bricks, nether bricks, nether wart block, netherrack,