@@ -12,43 +12,59 @@ import traceback
 
 
 class ModDependency:
-    def __init__(self, name: str, versions=None):
+    def __init__(self, name: str, version_min=None, version_max=None, versions=None):
         """
-        creates an new mod dependency instance. need to be assigned with another mod
+        creates an new mod dependency instance. need to be assigned with another mod. if no version(s) is/are specified,
+        all are allowed
         :param name: the name of the mod
-        :param versions: None if all, version if only one, list of versions if only a group,
-                         list of False and than versions for not (excluding)
+        :param version_min: the minimum version to use, including
+        :param version_max: the maximum version to use, including
+        :param versions: set when an list of possible versions should be used. Can contain min-value and
+            tuples of (min, max) [a whole range]
 
         """
         self.name = name
+        self.version_range = (version_min, version_max)
         self.versions = versions
 
     def arrival(self) -> bool:
         if self.name not in G.modloader.mods: return False
+        mod = G.modloader.mods[self.name]
+        if self.version_range[0] is not None:
+            if self.version_range[1] is not None:
+                return self.__testfor(mod.version, self.version_range)
+            return self.__testfor(mod.version, self.version_range[0])
         if self.versions is None: return True
-        real_mod = G.modloader.mods[self.name]
-        if self.versions == real_mod.version: return True
         if type(self.versions) == list:
-            if real_mod.version in self.versions: return True
+            return any([self.__testfor(mod.version, e) for e in self.versions])
         return False
+
+    def __testfor(self, version, args: tuple) -> bool:
+        if type(args[0]) == int: return version >= args
+        if len(args) == 1: return version >= args[0]
+        if len(args) == 2: return args[1] >= version >= args[0]
 
     def get_version(self):
         return G.modloader.mods[self.name].version
 
-    def get_loading_stage(self):
-        pass
-
     def __str__(self):
-        if not self.versions:
-            return self.name
-        elif type(self.versions) == str:
-            if self.versions[0]:
-                return "{} in any of the following versions: ".format(self.name) + (", ".join(self.versions) if type(
-                    self.versions) != str else self.versions)
+        if self.version_range[0] is not None:
+            if self.version_range[1] is not None:
+                return "'{}' in version from version {} to {}".format(self.name,
+                                                                      ".".join([str(e) for e in self.version_range[0]]),
+                                                                      ".".join([str(e) for e in self.version_range[1]]))
+            return "'{}' in version starting from version {}".format(self.name, ".".join(
+                [str(e) for e in self.version_range[0]]))
+        if self.versions is None or len(self.versions) == 0: return "'{}' in any version".format(self.name)
+        cond = []
+        for entry in self.versions:
+            if type(entry[0]) == int: cond.append(".".join([str(e) for e in entry]))
+            elif len(entry) == 1: cond.append(".".join([str(e) for e in entry[0]]))
+            elif len(entry) == 2: cond.append("{} to {}".format(".".join([str(e) for e in entry[0]]),
+                                                                ".".join([str(e) for e in entry[1]])))
             else:
-                return "{} in none any of the following versions: ".format(self.name) + ", ".join(self.versions[1:])
-        else:
-            return "{} in version {}".format(self.name, self.versions)
+                raise ValueError("can't cast entry '{}' to valid version identifier".format(entry))
+        return "'{}' in version(s) {}".format(self.name, " or ".join(cond))
 
 
 class Mod:
@@ -56,11 +72,15 @@ class Mod:
     class for mods. for creating an new mod, create an instance of this
     """
 
-    def __init__(self, name: str, version):
+    def __init__(self, name: str, version: tuple):
         """
         creates an new mod
         :param name: the name of the mod
+        :param version: an tuple of CONSTANT length across ALL versions representing the version of the mod
         """
+        if type(version) != tuple:
+            raise ValueError("can't use mod named '{}' as it provides an not-valid version '{}'".format(
+                name, version))
         self.name = name
         self.eventbus: event.EventBus.EventBus = event.EventHandler.LOADING_EVENT_BUS.create_sub_bus(
             crash_on_error=False)
@@ -69,6 +89,9 @@ class Mod:
         self.version = version
         self.package = None
         G.modloader.add_to_add(self)
+
+    def mod_string(self):
+        return "{} ({})".format(self.name, ".".join([str(e) for e in self.version]))
 
     def add_load_default_resources(self):
         import ResourceLocator
