@@ -8,6 +8,11 @@ blocks based on 1.15.2.jar of minecraft, downloaded on 1th of February, 2020"""
 import mod.Mod
 import config
 
+VERSION_POST = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+
+VERSION = (0, 1, int(config.VERSION_NAME[:2]), int(config.VERSION_NAME[3:5]),
+           VERSION_POST.index(config.VERSION_NAME[5]))
+
 # create the mod
-mcpython = mod.Mod.Mod("minecraft", config.VERSION_NAME)
+mcpython = mod.Mod.Mod("minecraft", VERSION)
 
